force-app/main/default/objects/User/fields/Contact_Move_Rights__c.field-meta.xml
<CustomField>
    <fullName>Contact_Move_Rights__c</fullName>
    <defaultValue>false</defaultValue>
    <description>allows User to change Company name on Contacts</description>
    <label>Contact Move Rights</label>
    <type>Checkbox</type>
</CustomField>