force-app/main/default/objects/User/fields/Contact_Sync_Rights__c.field-meta.xml
<CustomField>
    <fullName>Contact_Sync_Rights__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contact Sync Rights</label>
    <type>Checkbox</type>
</CustomField>