force-app/main/default/objects/User/fields/DaScoopComposer__Default_Groove_Team__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Default_Groove_Team__c</fullName>
    <inlineHelpText>Controls to which Groove team the user will be assigned to by default. If the value of this field matches a team that exists in Groove (case-sensitive), Groove will automatically assign the user to that team in Groove. This happens every 24 hours.</inlineHelpText>
    <label>Default Groove Team</label>
    <length>255</length>
    <type>Text</type>
</CustomField>