force-app/main/default/objects/User/fields/DaScoopComposer__Email_Alias_1__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Email_Alias_1__c</fullName>
    <inlineHelpText>allows you to specify an alternative email address of the user. Besides the primary email address alias will also be used in order to identify who the owner, organizer or invitees are of tasks/events created by Groove.</inlineHelpText>
    <label>Email Alias 1</label>
    <type>Email</type>
</CustomField>