force-app/main/default/objects/User/fields/DaScoopComposer__Google_Plus_ID__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Google_Plus_ID__c</fullName>
    <inlineHelpText>is the G+ ID of the user. This is populated via the Groove Auth Provider Handler at the first time a user logs in via this Auth Provider.</inlineHelpText>
    <label>G+ ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>