force-app/main/default/objects/User/fields/DaScoopComposer__Is_Unresolved_Items_Agent__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Is_Unresolved_Items_Agent__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Controls whether or not this user can be authorized by other users to managed their unresolved items.

WARNING: enabling this option for a user might expose the content of other users&apos; emails to this user.</inlineHelpText>
    <label>Is Unresolved Items Agent</label>
    <type>Checkbox</type>
</CustomField>