force-app/main/default/objects/User/fields/DaScoopComposer__My_Unresolved_Items_Agent__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__My_Unresolved_Items_Agent__c</fullName>
    <inlineHelpText>Controls who you authorize too handle your Groove Unresolved Items (i.e. deleting or assigning synced emails to related records).

WARNING: This will expose some of your emails to the Unresolved Items Agent.</inlineHelpText>
    <label>My Unresolved Items Agent</label>
    <relationshipName>Unresolved_Items_Clients</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>