force-app/main/default/objects/User/fields/Data_com_User__c.field-meta.xml
<CustomField>
    <fullName>Data_com_User__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Used to display Get Contacts button on Company page</inlineHelpText>
    <label>Data.com User</label>
    <type>Checkbox</type>
</CustomField>