force-app/main/default/objects/User/fields/Full_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Full_User_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full User ID</label>
    <type>Text</type>
</CustomField>