force-app/main/default/objects/User/fields/Has_Delegates__c.field-meta.xml
<CustomField>
    <fullName>Has_Delegates__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Has Delegates</label>
    <type>Checkbox</type>
</CustomField>