force-app/main/default/objects/User/fields/HL_STAFFID__c.field-meta.xml
<CustomField>
    <fullName>HL_STAFFID__c</fullName>
    <externalId>true</externalId>
    <label>HL_STAFFID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>