force-app/main/default/objects/User/fields/lmscons__CFS_Status__c.field-meta.xml
<CustomField>
    <fullName>lmscons__CFS_Status__c</fullName>
    <label>CFS Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Deactivated</fullName>
            </value>
            <value>
                <fullName>Not CFS user</fullName>
                <default>true</default>
                <label>Not CFS user</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>