force-app/main/default/objects/User/fields/lmscons__Cornerstone_Group_Admin__c.field-meta.xml
<CustomField>
    <fullName>lmscons__Cornerstone_Group_Admin__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Deprecated</description>
    <label>Cornerstone Group Admin</label>
    <type>Checkbox</type>
</CustomField>