force-app/main/default/objects/User/fields/lmscons__Cornerstone_ID__c.field-meta.xml
<CustomField>
    <fullName>lmscons__Cornerstone_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Cornerstone ID</label>
    <length>200</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>