force-app/main/default/objects/User/fields/pi__Pardot_Api_Version__c.field-meta.xml
<CustomField>
    <fullName>pi__Pardot_Api_Version__c</fullName>
    <label>Pardot Api Version</label>
    <length>1</length>
    <type>Text</type>
</CustomField>