force-app/main/default/objects/User/fields/pi__Pardot_User_Role__c.field-meta.xml
<CustomField>
    <fullName>pi__Pardot_User_Role__c</fullName>
    <label>Pardot User Role</label>
    <length>100</length>
    <type>Text</type>
</CustomField>