force-app/main/default/objects/User/validationRules/User_Fields_not_Editable.validationRule-meta.xml
<ValidationRule>
    <fullName>User_Fields_not_Editable</fullName>
    <active>true</active>
    <description>Only Salesforce Administrators (Modify All permission) can edit these user fields.</description>
    <errorConditionFormula>AND(
OR(
ISCHANGED(Email),
ISCHANGED(FirstName),
ISCHANGED(LastName),
ISCHANGED(Title),
ISCHANGED(Department),
ISCHANGED(Phone),
ISCHANGED(Street),
ISCHANGED(City),
ISCHANGED(State),
ISCHANGED(Country),
ISCHANGED(PostalCode)),
( $Profile.Name &lt;&gt; &quot;System Administrator&quot;))</errorConditionFormula>
    <errorMessage>You don&apos;t have the permissions to update these fields: 
Email, 
First Name, 
Last Name, 
Title, 
Phone, 
Street, 
City, 
State, 
Country, 
Postal Code</errorMessage>
</ValidationRule>