force-app/main/default/objects/User/listViews/Active_London_Users.listView-meta.xml
<ListView>
    <fullName>Active_London_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USERS.TITLE</columns>
    <columns>CORE.USERS.DEPARTMENT</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Office__c</field>
        <operation>equals</operation>
        <value>LO</value>
    </filters>
    <label>Active London Users</label>
</ListView>