force-app/main/default/objects/User/listViews/Chatter_Pilot_CF_Perm_Platform.listView-meta.xml
<ListView>
    <fullName>Chatter_Pilot_CF_Perm_Platform</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.USERS.ADDRESS_CITY</columns>
    <columns>CORE.USERS.DEPARTMENT</columns>
    <columns>CORE.USERS.TITLE</columns>
    <columns>LOCALE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>Chatter Pilot - CF Perm (Platform)</value>
    </filters>
    <label>Chatter Pilot - CF Perm (Platform)</label>
</ListView>