force-app/main/default/objects/User/listViews/Chatter_Pilot_CF_w_o_VIDEO_Platform.listView-meta.xml
<ListView>
    <fullName>Chatter_Pilot_CF_w_o_VIDEO_Platform</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.DEPARTMENT</columns>
    <columns>CORE.USERS.TITLE</columns>
    <columns>CORE.USERS.ADDRESS_CITY</columns>
    <columns>CREATED_DATE</columns>
    <columns>TIMEZONE</columns>
    <columns>CORE.USERS.SAML_SUBJECT</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>Chatter Pilot - CF w/o VIDEO (Platform)</value>
    </filters>
    <label>Chatter Pilot - CF w/o VIDEO (Platform)</label>
</ListView>