force-app/main/default/objects/User/listViews/Data_com_Users.listView-meta.xml
<ListView>
    <fullName>Data_com_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USERS.TITLE</columns>
    <columns>CORE.USERS.DEPARTMENT</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>JIGSAW_PROSPECTING_USER</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Data.com Users</label>
</ListView>