force-app/main/default/objects/User/listViews/Datamatics.listView-meta.xml
<ListView>
    <fullName>Datamatics</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USERS.TITLE</columns>
    <columns>CORE.USERS.DEPARTMENT</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>Contact_Move_Rights__c</columns>
    <columns>Contact_Sync_Rights__c</columns>
    <columns>LOCALE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.EMAIL</field>
        <operation>contains</operation>
        <value>dfssl</value>
    </filters>
    <filters>
        <field>CORE.USERS.EMAIL</field>
        <operation>contains</operation>
        <value>datamatics</value>
    </filters>
    <label>Datamatics</label>
</ListView>