force-app/main/default/objects/User/listViews/Deactivated.listView-meta.xml
<ListView>
    <fullName>Deactivated</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>notEqual</operation>
        <value>1</value>
    </filters>
    <label>Deactivated</label>
</ListView>